--- a/HelloWorldWH/HelloWorldWH/HelloWorldWH.csproj
+++ b/HelloWorldWH/HelloWorldWH/HelloWorldWH.csproj
@@ -65,6 +65,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
+    <Content Include="Content\spritrestsheet.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="OpenTK.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
