Added the Prompt Label

--- a/HelloWorldWH/HelloWorldWH/HelloWorldWH.csproj
+++ b/HelloWorldWH/HelloWorldWH/HelloWorldWH.csproj
@@ -73,6 +73,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Icon.ico" />
     <Content Include="Content\eat_me.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
