collision works, and i implemented the diddly doo collectibles

--- a/HelloWorldWH/HelloWorldWH/HelloWorldWH.csproj
+++ b/HelloWorldWH/HelloWorldWH/HelloWorldWH.csproj
@@ -38,7 +38,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Collectable.cs" />
+    <Compile Include="Collectible.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
