--- a/HelloWorldWH/HelloWorldWH/HelloWorldWH.csproj
+++ b/HelloWorldWH/HelloWorldWH/HelloWorldWH.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Collectible.cs" />
@@ -80,6 +80,7 @@
     <Content Include="Content\eat_me.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\favicon.ico" />
     <Content Include="Content\logo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -89,6 +90,7 @@
     <Content Include="Content\spritrestsheet.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="favicon.ico" />
     <Content Include="OpenTK.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -98,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\Arial.spritefont" />
+    <None Include="Content\credit_to_TopeconHeroes.ogg" />
     <None Include="Content\NewSpriteFont.spritefont">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
